# Cheeto-Panel

./: .prettierrc  package.json  tailwind.config.js
.github/workflows/: tauri-build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/injection/: dll_injector.rs  mod.rs  process_utils.rs  shared_memory.rs
src-tauri/src/ipc/: mod.rs  named_pipe.rs
src-tauri/src/tauri_commands/: feature.rs  feature_control.rs  mod.rs  process.rs
src-tauri/src/utils/: mod.rs  windows_utils.rs
src/components/: Layout.tsx  TitleBar.tsx
src/components/ui/: StatusIndicator.tsx
src/hooks/: useInjector.ts  useProcMon.ts
src/pages/: Features.tsx  Home.tsx
src/types/: index.ts
