[package]
name = "ba-cheeto"
version = "0.1.0"
description = "Interface for BA-Cheeto"
authors = ["Taiga74164"]
edition = "2024"

[lib]
name = "ba_cheeto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
winapi = { version = "0.3", features = [
    "fileapi",
    "handleapi",
    "winbase",
    "winnt",
    "errhandlingapi",
    "winerror",
    "namedpipeapi",
    "synchapi",
    "memoryapi",
    "psapi",
    "tlhelp32"
] }
thiserror = "2"
